2014-09-08  Jessie Berlin  <jberlin@apple.com>

        Build fix after r173374.

        * wtf/dtoa/strtod.cc:

2014-09-08  Jessie Berlin  <jberlin@apple.com>

        Speculative build fix after r173364.

        * wtf/dtoa/strtod.cc:

2014-09-07  Maciej Stachowiak  <mjs@apple.com>

        Introduce COMPILER_QUIRK(CONSIDERS_UNREACHABLE_CODE) and use it
        https://bugs.webkit.org/show_bug.cgi?id=136616

        Reviewed by Darin Adler.

        * wtf/Compiler.h: Define the quirk for all compilers but clang.

2014-09-06  Sam Weinig  <sam@webkit.org>

        XPCPtr should be converted into an all purpose smart pointer for os_objects
        https://bugs.webkit.org/show_bug.cgi?id=136602

        Reviewed by Darin Adler.

        * WTF.xcodeproj/project.pbxproj:
        * wtf/OSObjectPtr.h: Copied from Source/WebKit2/Platform/IPC/mac/XPCPtr.h.
        (WTF::retainOSObject):
        (WTF::releaseOSObject):
        (WTF::OSObjectPtr::OSObjectPtr):
        (WTF::OSObjectPtr::~OSObjectPtr):
        (WTF::OSObjectPtr::operator=):
        (WTF::adoptOSObject):
        (IPC::XPCPtr::XPCPtr): Deleted.
        (IPC::XPCPtr::~XPCPtr): Deleted.
        (IPC::XPCPtr::operator=): Deleted.
        (IPC::adoptXPC): Deleted.
        Rename/move XPCPtr to OSObjectPtr and make it work with any os_object.

2014-09-06  Darin Adler  <darin@apple.com>

        Make updates suggested by new version of Xcode
        https://bugs.webkit.org/show_bug.cgi?id=136603

        Reviewed by Mark Rowe.

        * Configurations/Base.xcconfig: Added CLANG_WARN_UNREACHABLE_CODE,
        COMBINE_HIDPI_IMAGES, and ENABLE_STRICT_OBJC_MSGSEND as suggested by
        Xcode upgrade check.

        * WTF.xcodeproj/project.pbxproj: Updated LastUpgradeCheck.

2014-09-05  Geoffrey Garen  <ggaren@apple.com>

        bmalloc should honor the FastMalloc statistics API
        https://bugs.webkit.org/show_bug.cgi?id=136592

        Reviewed by Gavin Barraclough.

        * wtf/FastMalloc.cpp: