@@ -1,5 +1,11 @@
 2014-09-08  Jessie Berlin  <jberlin@apple.com>
 
+        More build fixes after r173374.
+
+        * wtf/dtoa/strtod.cc:
+
+2014-09-08  Jessie Berlin  <jberlin@apple.com>
+
         Build fix after r173374.
 
         * wtf/dtoa/strtod.cc:
